k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fintech-prod
  labels:
    environment: production
