k8s-manifests/core-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-service
  namespace: fintech-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-service
  template:
    metadata:
      labels:
        app: core-service
    spec:
      containers:
      - name: core-service
        image: 982081054052.dkr.ecr.ap-south-1.amazonaws.com/fintech/banking-core:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        command: ["/bin/sh", "-c"]
        args: ["java -jar app.jar --spring.datasource.url=jdbc:mysql://$(SPRING_DATASOURCE_URL)/banking_core_db"]

# FIXED SEPARATOR HERE (No spaces before ---)
---
apiVersion: v1
kind: Service
metadata:
  name: internet-banking-core-service
  namespace: fintech-prod
spec:
  selector:
    app: core-service
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
