k8s-manifests/fund-transfer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fund-transfer
  namespace: fintech-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fund-transfer
  template:
    metadata:
      labels:
        app: fund-transfer
    spec:
      containers:
      - name: fund-transfer
        image: 982081054052.dkr.ecr.ap-south-1.amazonaws.com/fintech/fund-transfer:3a3086a6ca13168d107328eb04f7bcb4513eb891
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        command: ["/bin/sh", "-c"]
        args: ["java -jar app.jar --spring.datasource.url=jdbc:mysql://$(DB_HOST)/banking_user_db"]
---
apiVersion: v1
kind: Service
metadata:
  name: fund-transfer
  namespace: fintech-prod
spec:
  selector:
    app: fund-transfer
  type: ClusterIP 
  ports:
    - port: 80
      targetPort: 8080
