k8s-manifests/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: fintech-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0.1
        args: ["start-dev"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: fintech-prod
spec:
  selector:
    app: keycloak
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
