k8s-manifests/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: fintech-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 982081054052.dkr.ecr.ap-south-1.amazonaws.com/fintech/user-service:v1
        ports:
        - containerPort: 8080
        command: ["/bin/sh","-c"]
        args:
          - java -jar app.jar --spring.datasource.url=jdbc:mysql://$(DB_HOST)/banking_user_db

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: fintech-prod
spec:
  selector:
    app: user-service
  ports:
  - port: 80
    targetPort: 8080
