k8s-manifests/utility-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utility-service
  namespace: fintech-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: utility-service
  template:
    metadata:
      labels:
        app: utility-service
    spec:
      containers:
      - name: utility-service
        image: 982081054052.dkr.ecr.ap-south-1.amazonaws.com/fintech/utility-service:0180d1403f5994e7b1cdedf96d7e4d78b3e4491b
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        command: ["/bin/sh", "-c"]
        args: ["java -jar app.jar --spring.datasource.url=jdbc:mysql://$(DB_HOST)/banking_user_db"]
---
apiVersion: v1
kind: Service
metadata:
  name: utility-service
  namespace: fintech-prod
spec:
  selector:
    app: utility-service
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
